MyWebApp/aks.yaml
apiVersion: apps/v1
kind: Deployment  
metadata:  
  name: my-app
  namespace: tst1
  labels:
    app: my-app
spec:  
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:  
      labels:  
        app: my-app
    spec:
      nodeSelector:
         "beta.kubernetes.io/os":  linux
      containers:  
      - name: my-app
        image: 'crwaprd1docker1.azurecr.io/dojo.bw.keyvault.poc.1-my-app:37263'
        ports:   
        - containerPort: 80
---
apiVersion: v1
kind: Service 
metadata: 
  name: my-app-service
  namespace: tst1
  labels:
    app: my-app-svc
spec: 
  type: LoadBalancer
  ports: 
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http-port
  selector: 
    app: my-app
