MyWebApp/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tst2-ingress
  namespace: tst2
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - www.example.com
    secretName: tls-secret
  rules:
  - host: www.example.com
    http:
      paths:
      - backend:
          serviceName: redirect-1-service
          servicePort: 80
        path: /xyz/app1/(.*)
